--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_HOST=localhost
-DB_USER=testuser
-DB_PASSWORD=testpass
+DB_USER=appuser
+DB_PASSWORD=apppassword
 DB_DATABASE=products
-DB_PORT=3308
+DB_PORT=3307
 
-PORT=8001
+PORT=8003
