--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "ejs": "^4.0.1",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
-    "mysql2": "^3.12.0"
+    "mysql2": "^3.12.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
